# apps-native-bluetooth-share-ui

./: .gbs.conf  AUTHORS  CMakeLists.txt  LICENSE  NOTICE  README.md  build.conf
.circleci/: config.yml  config_backup.yml
data/: bluetooth-share-ui.ini  org.tizen.bluetooth-share-ui.xml
data/edc/: bt-share-layout.edc  bt_share_icon_animation.edc  image_macro.edc  images.edc
packaging/: org.tizen.bluetooth-share-ui.spec
src/: applog.h  bt-share-ui-ipc.c  bt-share-ui-ipc.h  bt-share-ui-main.c  bt-share-ui-main.h  bt-share-ui-popup.c  bt-share-ui-popup.h  bt-share-ui-resource.h  bt-share-ui-view.c  bt-share-ui-view.h  bt-share-ui-widget.c  bt-share-ui-widget.h
